setup-aiverify/aiverify-kube/aiverify-portal.yml
apiVersion: v1
kind: Service
metadata:
  name: aiverify-portal-service
  namespace: aiverify
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/name: aiverify-portal
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiverify-portal-deployment
  namespace: aiverify
  labels:
    app.kubernetes.io/name: aiverify-portal
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: aiverify-portal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aiverify-portal
    spec:
      serviceAccountName: default
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: aiverify-portal
          image: aiverify-portal:0.10-amd64
          args:
            - "bash"
            - "-c"
            - "cd aiverify/ai-verify-apigw; node app.mjs & cd ../ai-verify-portal; npm run start"
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 500m
              memory: 1024Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
                drop:
                  ["ALL"]
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: aiverify-shared-data
              mountPath: /app/aiverify/ai-verify-portal/plugins
              subPath: plugins
            - name: aiverify-shared-data
              mountPath: /app/aiverify/uploads/data
              subPath: data
            - name: aiverify-shared-data
              mountPath: /app/aiverify/uploads/model
              subPath: model
            - name: aiverify-shared-data
              mountPath: /app/aiverify/test-engine-app/logs
              subPath: logs
      volumes:
        - name: aiverify-shared-data
          persistentVolumeClaim:
            claimName: aiverify-shared-pvc
---
