setup-aiverify/aiverify-kube/aiverify-test-engine.yml
apiVersion: v1
kind: Service
metadata:
  name: aiverify-test-engine-service
  namespace: aiverify
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: aiverify-test-engine
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiverify-test-engine-deployment
  namespace: aiverify
  labels:
    app.kubernetes.io/name: aiverify-test-engine
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: aiverify-test-engine
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aiverify-test-engine
    spec:
      serviceAccountName: test-engine-sa
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: aiverify-test-engine
          image: aiverify-test-engine:0.10-amd64
          args:
            - "bash"
            - "-c"
            - "cp -a aiverify/stock-plugins/* aiverify/ai-verify-portal/plugins; cd aiverify/test-engine-app; python3 -m test_engine_app"
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 500m
              memory: 1024Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
                drop:
                  ["ALL"]
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: aiverify-shared-data
              mountPath: /app/aiverify/ai-verify-portal/plugins
              subPath: plugins
            - name: aiverify-shared-data
              mountPath: /app/aiverify/uploads/data
              subPath: data
            - name: aiverify-shared-data
              mountPath: /app/aiverify/uploads/model
              subPath: model
            - name: aiverify-shared-data
              mountPath: /app/aiverify/test-engine-app/logs
              subPath: logs
      volumes:
        - name: aiverify-shared-data
          persistentVolumeClaim:
            claimName: aiverify-shared-pvc
